--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://tomastrajan.github.io/angular-ngrx-material-starter">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="icon" type="image/png" href="./assets/logo.png">
+    <link rel="icon" type="image/png" href="./assets/images/logo.png">
     <style type="text/css">
         body, html {
             height: 100%;
@@ -77,7 +77,7 @@
   <div class="app-loading">
     <div class="logo">
       <svg class="spinner" viewBox="25 25 50 50">
-        <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
+        <circle class="path" cx="60" cy="60" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
       </svg>
     </div>
   </div>
